--- a/package.json
+++ b/package.json
@@ -9,10 +9,15 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "i18next": "^23.14.0",
+    "i18next-browser-languagedetector": "^8.0.0",
+    "i18next-http-backend": "^2.6.1",
     "next": "14.2.7",
+    "next-intl": "^3.19.1",
     "next-themes": "^0.3.0",
     "react": "^18",
     "react-dom": "^18",
+    "react-i18next": "^15.0.1",
     "react-icons": "^5.3.0",
     "tailwind-clip-path": "^1.0.0"
   },
